Fix homepae video on mobile

--- a/desktop/trp/marketingsite/wp-content/themes/sage-master/assets/styles/pages/_home.scss
+++ b/desktop/trp/marketingsite/wp-content/themes/sage-master/assets/styles/pages/_home.scss
@@ -7,7 +7,8 @@
 	right: -9999px;
 	margin: auto;
 	position: absolute;
-	@media (max-width: 1920px) {
+	width: initial;
+	@media (min-width: 1920px) {
 		width: 100%;
 	}
 }
